last tweaks and checks

--- a/nbs/0.0.3 Preview data.ipynb
+++ b/nbs/0.0.3 Preview data.ipynb
@@ -771,11 +771,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "gambler = read_sql_data_frame('../data/with_gambler/the_main.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exp_index</th>\n",
+       "      <th>first_opponent_q_1</th>\n",
+       "      <th>first_opponent_q_2</th>\n",
+       "      <th>first_opponent_q_3</th>\n",
+       "      <th>first_opponent_q_4</th>\n",
+       "      <th>second_opponent_q_1</th>\n",
+       "      <th>second_opponent_q_2</th>\n",
+       "      <th>second_opponent_q_3</th>\n",
+       "      <th>second_opponent_q_4</th>\n",
+       "      <th>mem_one_p_1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>gambler_paramater_p_8</th>\n",
+       "      <th>gambler_paramater_p_9</th>\n",
+       "      <th>gambler_paramater_p_10</th>\n",
+       "      <th>gambler_paramater_p_11</th>\n",
+       "      <th>gambler_paramater_p_12</th>\n",
+       "      <th>gambler_paramater_p_13</th>\n",
+       "      <th>gambler_paramater_p_14</th>\n",
+       "      <th>gambler_paramater_p_15</th>\n",
+       "      <th>gambler_paramater_p_16</th>\n",
+       "      <th>gambler_utility</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>201.931818</td>\n",
+       "      <td>0.480995</td>\n",
+       "      <td>0.538389</td>\n",
+       "      <td>0.512436</td>\n",
+       "      <td>0.487729</td>\n",
+       "      <td>0.479222</td>\n",
+       "      <td>0.495657</td>\n",
+       "      <td>0.503454</td>\n",
+       "      <td>0.516967</td>\n",
+       "      <td>0.233582</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.480770</td>\n",
+       "      <td>0.039245</td>\n",
+       "      <td>0.088109</td>\n",
+       "      <td>0.505360</td>\n",
+       "      <td>0.515286</td>\n",
+       "      <td>0.193236</td>\n",
+       "      <td>0.207470</td>\n",
+       "      <td>0.516041</td>\n",
+       "      <td>0.486931</td>\n",
+       "      <td>3.145435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>115.706010</td>\n",
+       "      <td>0.294389</td>\n",
+       "      <td>0.285051</td>\n",
+       "      <td>0.304387</td>\n",
+       "      <td>0.291484</td>\n",
+       "      <td>0.274676</td>\n",
+       "      <td>0.281024</td>\n",
+       "      <td>0.294230</td>\n",
+       "      <td>0.280097</td>\n",
+       "      <td>0.406768</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.390135</td>\n",
+       "      <td>0.191679</td>\n",
+       "      <td>0.276112</td>\n",
+       "      <td>0.415186</td>\n",
+       "      <td>0.417217</td>\n",
+       "      <td>0.380998</td>\n",
+       "      <td>0.381502</td>\n",
+       "      <td>0.395150</td>\n",
+       "      <td>0.410030</td>\n",
+       "      <td>0.565649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.006326</td>\n",
+       "      <td>0.000426</td>\n",
+       "      <td>0.001495</td>\n",
+       "      <td>0.012198</td>\n",
+       "      <td>0.000452</td>\n",
+       "      <td>0.000210</td>\n",
+       "      <td>0.000616</td>\n",
+       "      <td>0.016723</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.980030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>106.750000</td>\n",
+       "      <td>0.220494</td>\n",
+       "      <td>0.301608</td>\n",
+       "      <td>0.251172</td>\n",
+       "      <td>0.246691</td>\n",
+       "      <td>0.232415</td>\n",
+       "      <td>0.251065</td>\n",
+       "      <td>0.261954</td>\n",
+       "      <td>0.254314</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.017140</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.058378</td>\n",
+       "      <td>0.028802</td>\n",
+       "      <td>2.712280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>224.500000</td>\n",
+       "      <td>0.462602</td>\n",
+       "      <td>0.567308</td>\n",
+       "      <td>0.535672</td>\n",
+       "      <td>0.452518</td>\n",
+       "      <td>0.497835</td>\n",
+       "      <td>0.511847</td>\n",
+       "      <td>0.514264</td>\n",
+       "      <td>0.515285</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.458376</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.537248</td>\n",
+       "      <td>0.530552</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.523236</td>\n",
+       "      <td>0.489406</td>\n",
+       "      <td>3.195172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>311.250000</td>\n",
+       "      <td>0.711099</td>\n",
+       "      <td>0.781662</td>\n",
+       "      <td>0.742976</td>\n",
+       "      <td>0.771237</td>\n",
+       "      <td>0.703374</td>\n",
+       "      <td>0.724862</td>\n",
+       "      <td>0.768369</td>\n",
+       "      <td>0.755946</td>\n",
+       "      <td>0.217462</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.904801</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.998510</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.121471</td>\n",
+       "      <td>0.965031</td>\n",
+       "      <td>0.976869</td>\n",
+       "      <td>3.552405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>344.000000</td>\n",
+       "      <td>0.979050</td>\n",
+       "      <td>0.982372</td>\n",
+       "      <td>0.983062</td>\n",
+       "      <td>0.998631</td>\n",
+       "      <td>0.998260</td>\n",
+       "      <td>0.996817</td>\n",
+       "      <td>0.999129</td>\n",
+       "      <td>0.998740</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.377580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 45 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        exp_index  first_opponent_q_1  first_opponent_q_2  first_opponent_q_3  \\\n",
+       "count  132.000000          132.000000          132.000000          132.000000   \n",
+       "mean   201.931818            0.480995            0.538389            0.512436   \n",
+       "std    115.706010            0.294389            0.285051            0.304387   \n",
+       "min      0.000000            0.006326            0.000426            0.001495   \n",
+       "25%    106.750000            0.220494            0.301608            0.251172   \n",
+       "50%    224.500000            0.462602            0.567308            0.535672   \n",
+       "75%    311.250000            0.711099            0.781662            0.742976   \n",
+       "max    344.000000            0.979050            0.982372            0.983062   \n",
+       "\n",
+       "       first_opponent_q_4  second_opponent_q_1  second_opponent_q_2  \\\n",
+       "count          132.000000           132.000000           132.000000   \n",
+       "mean             0.487729             0.479222             0.495657   \n",
+       "std              0.291484             0.274676             0.281024   \n",
+       "min              0.012198             0.000452             0.000210   \n",
+       "25%              0.246691             0.232415             0.251065   \n",
+       "50%              0.452518             0.497835             0.511847   \n",
+       "75%              0.771237             0.703374             0.724862   \n",
+       "max              0.998631             0.998260             0.996817   \n",
+       "\n",
+       "       second_opponent_q_3  second_opponent_q_4  mem_one_p_1       ...         \\\n",
+       "count           132.000000           132.000000   132.000000       ...          \n",
+       "mean              0.503454             0.516967     0.233582       ...          \n",
+       "std               0.294230             0.280097     0.406768       ...          \n",
+       "min               0.000616             0.016723     0.000000       ...          \n",
+       "25%               0.261954             0.254314     0.000000       ...          \n",
+       "50%               0.514264             0.515285     0.000000       ...          \n",
+       "75%               0.768369             0.755946     0.217462       ...          \n",
+       "max               0.999129             0.998740     1.000000       ...          \n",
+       "\n",
+       "       gambler_paramater_p_8  gambler_paramater_p_9  gambler_paramater_p_10  \\\n",
+       "count             132.000000             132.000000              132.000000   \n",
+       "mean                0.480770               0.039245                0.088109   \n",
+       "std                 0.390135               0.191679                0.276112   \n",
+       "min                 0.000000               0.000000                0.000000   \n",
+       "25%                 0.000000               0.000000                0.000000   \n",
+       "50%                 0.458376               0.000000                0.000000   \n",
+       "75%                 0.904801               0.000000                0.000000   \n",
+       "max                 1.000000               1.000000                1.000000   \n",
+       "\n",
+       "       gambler_paramater_p_11  gambler_paramater_p_12  gambler_paramater_p_13  \\\n",
+       "count              132.000000              132.000000              132.000000   \n",
+       "mean                 0.505360                0.515286                0.193236   \n",
+       "std                  0.415186                0.417217                0.380998   \n",
+       "min                  0.000000                0.000000                0.000000   \n",
+       "25%                  0.000000                0.017140                0.000000   \n",
+       "50%                  0.537248                0.530552                0.000000   \n",
+       "75%                  0.998510                1.000000                0.000000   \n",
+       "max                  1.000000                1.000000                1.000000   \n",
+       "\n",
+       "       gambler_paramater_p_14  gambler_paramater_p_15  gambler_paramater_p_16  \\\n",
+       "count              132.000000              132.000000              132.000000   \n",
+       "mean                 0.207470                0.516041                0.486931   \n",
+       "std                  0.381502                0.395150                0.410030   \n",
+       "min                  0.000000                0.000000                0.000000   \n",
+       "25%                  0.000000                0.058378                0.028802   \n",
+       "50%                  0.000000                0.523236                0.489406   \n",
+       "75%                  0.121471                0.965031                0.976869   \n",
+       "max                  1.000000                1.000000                1.000000   \n",
+       "\n",
+       "       gambler_utility  \n",
+       "count       132.000000  \n",
+       "mean          3.145435  \n",
+       "std           0.565649  \n",
+       "min           1.980030  \n",
+       "25%           2.712280  \n",
+       "50%           3.195172  \n",
+       "75%           3.552405  \n",
+       "max           4.377580  \n",
+       "\n",
+       "[8 rows x 45 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gambler.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gambler.to_csv('../data/numerical_experiments_with_gambler.csv')"
    ]
   },
   {
