--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \title{Stability of defection, optimisation of strategies and the limits of
        memory in the Prisoner's Dilemma.}
-\author{Nikoleta E. Glynatsi \and Vincent A. Knight}
+\author{Nikoleta E. Glynatsi \and Vincent Knight}
 \date{}
 
 \begin{document}
@@ -105,7 +105,7 @@ history of the interactions matters. The repeated form of the game is called the
 Iterated Prisoner's Dilemma (IPD) and in the 1980s, following the work
 of~\cite{Axelrod1980a, Axelrod1980b} it attracted the attention of the
 scientific community. In~\cite{Axelrod1980a} and~\cite{Axelrod1980b}, the first
-well known computer tournaments of the IPD were performed. A total of 13 and 63
+well known computer tournaments of the IPD were performed. A total of 13 and 62
 strategies were submitted respectively in the form of computer code. The
 contestants competed against each other, a copy of themselves and a random
 strategy, and the winner was then decided on the average score achieved (not the
@@ -123,9 +123,9 @@ Another trait of Tit for Tat is that it considers only the previous move of the
 opponent. These type of strategies are called \textit{reactive} \cite{Nowak1989}
 and are a subset of so called \textit{memory-one} strategies, which incorporate
 both players' latests moves. Memory-one strategies have been
-studied thoroughly in the literature~\cite{Nowak1990, Nowak1993} however they have gained
+studied thoroughly in the literature~\cite{Nowak1990, Nowak1993}, however, they have gained
 most of their attention when a certain subset of memory-one strategies was
-introduced in~\cite{Press2012}, the zero-determinant. In~\cite{Stewart2012} it
+introduced in~\cite{Press2012}, the zero-determinants. In~\cite{Stewart2012} it
 was stated that ``Press and Dyson have fundamentally changed the viewpoint on
 the Prisoner's Dilemma''.
 
@@ -139,7 +139,7 @@ evolutionary dynamics has been questioned~\cite{adami2013, Knight2018,
 Harper2015}.
 
 In a similar fashion to~\cite{Press2012} the purpose of this work is to consider
-a given memory-one strategy, however whilst~\cite{Press2012} found a way for a
+a given memory-one strategy; however, whilst~\cite{Press2012} found a way for a
 player to manipulate a given opponent, this work will consider a
 multidimensional optimisation approach to identify the best response to a given
 group of opponents. In particular, this work presents a compact method of
@@ -338,7 +338,7 @@ Figure~\ref{fig:hypothesis}.
     \label{fig:hypothesis}
 \end{figure}
 
-Two theoretical results have been presented so far. The formulation of
+In this section two theoretical results were presented. The formulation of
 Theorem~\ref{theorem:tournament_utility} which allows for the utility of a
 memory-one strategy against any number of opponents to be estimated without
 simulating the interactions is the main result used in this manuscript. In
@@ -372,10 +372,10 @@ denominator of the fractional problem are concave or that the denominator is
 greater than zero. Both assumptions fail here as stated in Theorem~\ref{theorem:concavity}.
 
 \begin{theorem}\label{theorem:concavity}
-    The utility of a player \(p\) against an opponent \(q\), \(u_q (p)\) given
+    The utility of a player \(p\) against an opponent \(q\), \(u_q (p)\), given
     by (\ref{eq:optimisation_quadratic}), is not concave. Furthermore neither
     the numerator or the denominator of (\ref{eq:optimisation_quadratic}), are
-    concave.
+    concave or greater than zero.
 \end{theorem}
 
 Proof is given in Appendix~\ref{appendix:proof_theorem_three}.
@@ -445,12 +445,13 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
 
 Finding best response memory-one strategies, more specifically constructing the
 subset \(S_q\), can done analytically. The points for any or all of \(p_i \in
-\{0, 1\}\) for \(i \in \{1, 2, 3, 4\}\) are trivial, and, finding finding the
+\{0, 1\}\) for \(i \in \{1, 2, 3, 4\}\) are trivial, and finding the
 roots of the partial derivatives which are a set of polynomials of equations
 (\ref{eq:polynomials_roots}) is feasible using resultant
-theory~\cite{Jonsson2005}. However, for large systems these quickly become
-intractable. As a result, numerical methods taking advantage of the structure will be used
-which are described in Section~\ref{section:numerical_experiments}. The rest of
+theory~\cite{Jonsson2005}; however, for large systems building the resultant quickly becomes
+intractable. As a result, a numerical method taking advantage of the structure
+will be used for finding best response memory-one strategies. This will be described
+in Section~\ref{section:numerical_experiments}. The rest of
 the section focuses on an immediate theoretical result from
 Lemma~\ref{lemma:memone_group_best_response}.
 
@@ -460,7 +461,7 @@ An immediate result from Lemma~\ref{lemma:memone_group_best_response} can be
 obtained by evaluating the sign of the derivative
 (\ref{eq:mo_tournament_derivative}) at \(p=(0, 0, 0, 0)\). If at that point the
 derivative is negative, then a player maximises their utility
-by playing as a Defector, and their utility would only decrease if they were
+by playing as a defector, and their utility would only decrease if they were
 to change their behaviour. Thus, defection is the best response.
 
 \begin{lemma}\label{lemma:stability_of_defection}
@@ -501,12 +502,14 @@ to change their behaviour. Thus, defection is the best response.
 \end{proof}
 
 In an environment where defection is the best response the average payoff of a
-defector is always higher than any other strategy can achieve. If we consider a
+defector is always higher than any other strategy can achieve. If a
 setting where in each the prevalence of each type of strategy was determined by
-that strategy's success in the previous round, then in a population such that
+that strategy's success in the previous round is considered, then in a population such that
 (\ref{eq:defection_condition_one}) and (\ref{eq:defection_condition_two}) hold,
 defection would prevail; thus cooperation would never occur.
 This is demonstrated in Figures~\ref{fig:stable_defection} and~\ref{fig:unstable_defection}.
+Lemma~\ref{lemma:stability_of_defection} is the last theoretical result presented
+in this manuscript. The following section focuses on numerical experiments.
 
 \begin{figure}[!htb]
     \begin{subfigure}{0.49\textwidth}
@@ -533,12 +536,9 @@ This is demonstrated in Figures~\ref{fig:stable_defection} and~\ref{fig:unstable
     \end{subfigure}
 \end{figure}
 
-Lemma~\ref{lemma:stability_of_defection} is last theoretical result presented
-in this manuscript. The following section focuses on numerical experiments.
-
 \section{Numerical experiments} \label{section:numerical_experiments}
 
-The results of this section rely on estimating best responses, but as stated in
+The results of this section rely on estimating memory-one best responses, but as stated in
 Section~\ref{section:best_response_mem_one}, estimating best responses
 analytically can quickly become an intractable problem. As a result, best
 responses will be estimated heuristically using Bayesian
@@ -550,7 +550,7 @@ the described search area of this work. Differential evolution~\cite{Storn1997}
 was also considered, however it was not selected due to Bayesian being
 computationally more efficient.
 
-As an example let's consider the optimisation problem of
+As an example of the algorithm's usage let's consider the optimisation problem of
 (\ref{eq:mo_tournament_optimisation}). Figure~\ref{bayesian_example}
 illustrates the change of the utility function over iterations of the algorithm.
 The default number of iterations that has been used in this work is 60. After 60
@@ -564,43 +564,44 @@ changed in the last 10\% iterations then a further 20 iterations are considered.
     \caption{Utility over time of calls using Bayesian optimisation. The
     opponents are \(q^{(1)} = (\frac{1}{3}, \frac{1}{3}, \frac{1}{3},
     \frac{1}{3})\) and \(q^{(2)} = (\frac{1}{3}, \frac{1}{3},
-    \frac{1}{3}, \frac{1}{3})\). The best response obtained is \(p^* = (0.0, \frac{11}{50}, 0.0, 0.0)\)}
+    \frac{1}{3}, \frac{1}{3})\). The best response obtained is \(p^* = (0, \frac{11}{50}, 0, 0)\)}
     \label{bayesian_example}
 \end{figure}
 
 The rest of the section is structured as follows. In
-Section~\ref{subsection:best_response_n_2} Bayesian optimisation is used to
-generate a data set containing memory-one best responses. Furthermore, using a
-method introduced in~\cite{Knight2019} the extortionate behaviour of these best
-responses will be evaluated. In Section
-\ref{subsection:best_respnse_evolutionary_setting} a similar set has been
-generated and evaluated but this time best responses consider self interactions
-as well. Finally Section~\ref{subsection:longer_memory_best_response} compares
+Section~\ref{subsection:best_response_n_2}, Bayesian optimisation is used to
+generate a data set containing memory-one best responses against a number of
+random opponents. The extortionate behaviour of these best
+responses is then evaluated using a method introduced in~\cite{Knight2019}. In Section
+\ref{subsection:best_respnse_evolutionary_setting}, a similar data set and approach
+is discussed but this time the best responses are memory-one best responses
+to a number of opponents and a copy of themselves.
+Finally, Section~\ref{subsection:longer_memory_best_response} compares
 the performances of memory-one and longer-memory best responses against a number
 of opponents.
 
 \subsection{Best response memory-one strategies for \(N=2\)}\label{subsection:best_response_n_2}
 
-As briefly discussed in Section~\ref{section:introduction} zero-determinant
-strategies have been praised for their robustness against a single opponent.
-Zero-determinants extortionate behaviour reassures that the strategies will
-never lose a game. Though extortion works in pairwise interactions this paper
+As briefly discussed in Section~\ref{section:introduction}, zero-determinants
+have been praised for their robustness against a single opponent.
+Zero-determinants' extortionate behaviour reassures that the strategies will
+never lose a game. Though extortion works in pairwise interactions, this paper
 argues that in multi opponent interactions, where the payoffs matter, strategies
 trying to exploit their opponents suffer.
 
-In comparison to zero-determinants, best response memory-one strategies that
-have a theory of mind of their opponents utilise their behaviour in order to
-gain the most from their interactions. he question that arises then is whether
+Compared to zero-determinants, best response memory-one strategies, that
+have a theory of mind of their opponents, utilise their behaviour in order to
+gain the most from their interactions. The question that arises then is whether
 best response strategies are the optimal because they behave in an extortionate
-way, similarly to zero determinants. To estimate a strategy's extortionate
-behaviour the SSE method as described in ~\cite{Knight2019} is used. SSE is
-defined as how far, a strategy is from behaving extortionate, for example a high
+way. To estimate a strategy's extortionate
+behaviour the SSE method as described in~\cite{Knight2019} is used. SSE is
+defined as how far a strategy is from behaving extortionate, thus a high
 SSE implies a non extortionate behaviour.
 
 A data set of best response memory-one strategies when \(N=2\) has been
 generated which is available at~\cite{glynatsi2019}. The data set contains a total of 1000 trials
 corresponding to 1000 different instances of a best response strategy. For each
-trial a set of 2 opponents is randomly generated, the memory-one best response
+trial a set of 2 opponents is randomly generated and the memory-one best response
 against them is estimated. Though the probabilities \(q_i\) of the opponents are
 randomly generated, Figures~\ref{fig:first_opponents_probabilities} and
 \ref{fig:second_opponents_probabilities}, show that they are uniformly
@@ -622,9 +623,17 @@ covered.
     \end{subfigure}
 \end{figure}
 
-The SSE method has been applied to the data set and it's distribution is shown
-in Figure~\ref{fig:sserror_mem_one} alongside a statistics summary in
-Table~\ref{table:sserror_stats}.
+The SSE method has been applied to the data set. It's distribution is given in
+Figure~\ref{fig:sserror_mem_one} and a statistics summary in
+Table~\ref{table:sserror_stats}. The distribution of SSE is skewed to the left,
+indicating that the best response does exhibit extortionate behaviour, however,
+the best response is not uniformly extortionate. A positive measure of skewness
+and kurtosis indicates a heavy tail to the right. Therefore, in several cases the
+strategy is not trying to extortionate the opponents.
+
+So though the best response strategy can exhibit extortionate behaviour, it's
+performance is maximised by behaving in a more adaptable way than zero-determinant
+strategies. This analysis is extended to an evolutionary setting.
 
 \begin{figure}[!htbp]
     \begin{minipage}{0.72\textwidth}
@@ -645,35 +654,23 @@ Table~\ref{table:sserror_stats}.
       \end{minipage}
 \end{figure}
 
-The distribution of SSE is skewed to left indicating that the best response does
-exhibit extortionate behaviour, however, the best response is not uniformly
-extortionate. A positive measure of skewness and kurtosis indicate a heavy tail
-to the right. Therefore, in several cases the strategy is not trying to
-extortionate the opponents. So though the best response strategy will
-extortionate some opponents, it utilities it's performance by behaving in a more
-adaptable way than zero-determinant strategies. This analysis is extended to an
-evolutionary setting.
-
 \subsection{Memory-one best responses in evolutionary dynamics}\label{subsection:best_respnse_evolutionary_setting}
 
-As mentioned in Section~\ref{section:utility} the IPD is commonly studied in
-Moran processes and in evolutionary processes in general where the strategies
-that compose the population can adapt and change their behaviour based on the
-outcomes of their interactions at each generation. In these processes self
-interactions are key. In this section the formulation of best responses is
-extended to evolutionary settings, and more specifically to include self
-interactions.
+As mentioned in Section~\ref{section:utility}, the IPD is commonly studied in
+Moran processes, and generally, in evolutionary processes. In these processes self
+interactions are key. This section extends the formulation of best responses
+to evolutionary settings, more specifically, the optimisation problem of
+(\ref{eq:mo_tournament_optimisation}) is extended to
+include self interactions.
 
 Self interactions can be incorporated in the formulation
-that has been used so far. The utility of a memory-one strategy in an
-evolutionary setting is given by,
+that has been used so far. The utility is given by,
 
 \begin{equation}
     \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) + u_p(p).
 \end{equation}
 
-and respectively the optimisation problem of (\ref{eq:mo_tournament_optimisation})
-is now re written as,
+and the optimisation problem of (\ref{eq:mo_tournament_optimisation}) is re written as,
 
 \begin{equation}\label{eq:mo_evolutionary_optimisation}
     \begin{aligned}
@@ -685,7 +682,8 @@ is now re written as,
 
 % Note that exact formulate are known for given evolutionary processes, however,
 % for simplicity 17 is given to optimisation.
-Finding the best response in evolutionary settings is done using \textit{best
+For determining the memory-one best response in an evolutionary setting,
+an algorithmic approach is considered, called \textit{best
 response dynamics}. Best response dynamics are commonly used in evolutionary
 game theory. They represent a class of strategy updating rules, where players in
 the next round are determined by their best responses to some subset of the
@@ -705,7 +703,7 @@ Algorithm~\ref{algo:best_response_dynamics}.
 \end{minipage}
 
 The best response dynamics algorithm starts by setting an initial
-solution \(p^{(1)}=(1, 1, 1, 1)\) and repeatedly finds a strategy that maximises
+solution \(p^{(1)}=(1, 1, 1, 1)\), and repeatedly finds a strategy that maximises
 (\ref{eq:mo_evolutionary_optimisation}) using Bayesian optimisation. The
 algorithm stops once a cycle (a sequence of iterated evaluated points) is
 detected. A numerical example of the algorithm is given in Figure~\ref{fig:best_response_dynamics_results}.
@@ -726,24 +724,25 @@ detected. A numerical example of the algorithm is given in Figure~\ref{fig:best_
 \end{figure}
 
 The algorithm has been used to estimate the best response in an evolutionary
-setting for each 1000 pairs of opponents described in Section~\ref{subsection:best_response_n_2}.
-These are included in the data set~\cite{glynatsi2019}. The distribution of SSE for the best response
-using evolutionary dynamics is given in Figure~\ref{fig:sserror_mem_one} and a
-statistical summary of it's distribution in Table~\ref{table:sserror_stats}.
+setting for each of the 1000 pairs of opponents described in
+Section~\ref{subsection:best_response_n_2}. These are also included in the data
+set~\cite{glynatsi2019}, and moreover, the SSE method has also been applied. The
+distribution of SSE is given by Figure~\ref{fig:sserror_mem_one} and a
+statistical summary by Table~\ref{table:sserror_stats}.
 
 Similarly to the results of Section~\ref{subsection:best_response_n_2}, the
 evolutionary best response strategy does not behave uniformly extortionate. A
 larger value of both the kurtosis and the skewness of the SSE distribution
-indicates that an evolutionary best response is more adaptable than the
-equivalent best response. The difference between the strategies is further
-explored. Figure~\ref{fig:behaviour_violin_plots} compares the tournament and
-evolutionary best responses. Though, Table~\ref{table:wilcoxon_tests} details
-that no statistically significant differences have been found, from
+indicates that in evolutionary settings a memory-one best response is even more
+adaptable.
+
+The difference between best responses in tournaments and in evolutionary
+settings are further explored by Figure~\ref{fig:behaviour_violin_plots}.
+Though, Table~\ref{table:wilcoxon_tests} details that no statistically
+significant differences has been found, from
 Figure~\ref{fig:behaviour_violin_plots}, it seems that evolutionary best
-response has a higher $p_2$ median. Thus, evolutionary best responses are not
-just more adaptable than best responses but they are also more likely to to
-forgive after mutual defection whilst it is more likely to forgive after being
-tricked.
+response has a higher $p_2$ median. Thus, they more likely to forgive after
+being tricked.
 
 \begin{figure}[!htbp]
     \begin{minipage}{0.72\textwidth}
@@ -786,15 +785,15 @@ tricked.
 
 This section focuses on the memory size of strategies. The effectiveness of
 memory in the IPD has been previously explored in the literature, as
-discussed in Section~\ref{section:introduction}, however, compared to these
-previous works this paper does not evaluated the performance of zero-determinant
-strategies but the performance of best responses. More specifically, the performance
-of the best response memory one strategy is compared that of a longer memory strategy.
+discussed in Section~\ref{section:introduction}, however, none of the
+previous works has compared the performance of longer-memory strategies to
+memory-one best responses.
+
 In~\cite{Harper2017}, a strategy called \textit{Gambler} which makes
 probabilistic decisions based on the opponent's \(n_1\) first moves, the
 opponent's \(m_1\) last moves and the player's \(m_2\) last moves was
 introduced. In this manuscript Gambler $n_1 = 2, m_1 = 1$ and $m_2 = 1$ is used
-as the longer memory strategy.
+as the longer-memory strategy.
 
 By considering the opponent's first two moves, the opponents last move and the
 player's last move, there are only 16 $(4 \times 2 \times 2)$ possible outcomes
@@ -823,8 +822,8 @@ instances of an optimal Gambler and a memory-one best response, available
 at~\cite{glynatsi2019}. For each trial two random opponents have been selected.
 The distributions of their transition probabilities are given in Figures
 \ref{fig:first_opponents_probabilities_with_gambler} and
-\ref{fig:first_opponents_probabilities_with_gambler}. A total of 120 trials have
-been collected.
+\ref{fig:first_opponents_probabilities_with_gambler}. The results of this section
+are base on a total of 130 trials.
 
 \begin{figure}[!htbp]
     \begin{subfigure}{0.49\textwidth}
@@ -841,17 +840,16 @@ been collected.
     \end{subfigure}
 \end{figure}
 
-The utilities of both strategies has been plotted against each other in
+The utilities of both strategies are plotted against each other in
 Figure~\ref{fig:utilities_gambler_mem_one}. Though Gambler has an infinite
 memory (in order to remember the opening moves of the opponent) the information
 the strategy considers is not significantly larger than memory-one strategies.
 Even so, it is evident from Figure~\ref{fig:utilities_gambler_mem_one} that
-Gambler will always performs the same or better than a best response memory one
-strategy. This seems to be at odd with the result of~\cite{Press2012} that
-against a memory-one opponent having a longer memory will give a strategy any
-advantage. However, against two memory-one opponents Gambler that has a longer
-memory performs better than the optimal memory-one strategy, thus having a
-shorter memory is limiting.
+Gambler will always performs the same or better. This seems to be at odd with the
+result of~\cite{Press2012} that against a memory-one opponent having a longer memory
+will not give a strategy any
+advantage. However, against two memory-one opponents Gambler performs better than
+the optimal memory-one strategy, thus having a shorter memory in this setting is limiting.
 
 \begin{figure}[!htbp]
     \centering
@@ -863,9 +861,9 @@ shorter memory is limiting.
 \section{Conclusion}
 
 This manuscript considers \textit{best response} strategies in the IPD game, and
-more specifically, \textit{memory-one best responses}. It has shown that there is
-a compact way of identifying a memory-one best response to a group of opponents.
-Moreover, it has proven that there exists a condition for which in an
+more specifically, \textit{memory-one best responses}. It has proven that there is
+a compact way of identifying a memory-one best response to a group of opponents,
+and moreover, that there exists a condition for which in an
 environment of memory-one opponents defection is the dominant and stable choice.
 The later parts of this paper focused on a series of empirical results where it
 was shown that the performance and the evolutionary stability of memory-one
@@ -884,26 +882,28 @@ the utility has a form allowed us to introduce an approach for identifying
 memory-one best responses to any number of opponents,
 Lemma~\ref{lemma:memone_group_best_response}. This does not only have game
 theoretic novelty, but also a mathematical novelty of solving quadratic ratio
-optimisation problem where the quadratic are non concave. The results of
+optimisation problem where the quadratics are non concave. The results of
 Lemma~\ref{lemma:memone_group_best_response} were also used to define a
 condition for which defection is known to be a best response.
 
 This manuscript also presented empirical results. These results were mainly to
 investigate the behaviour of memory-one strategies and their limitations. In
 Sections~\ref{subsection:best_response_n_2}
-and~\ref{subsection:best_respnse_evolutionary_setting} a large data set which
+and~\ref{subsection:best_respnse_evolutionary_setting}, a large data set which
 contained best responses in tournaments and in evolutionary settings for $N=2$
 was generated. This allowed us to investigate their respective behaviours and
 whether it was extortionate acts that made them most favorable strategies.
 However, it was shown that it was not extortion but adaptability that allowed
 the strategies to gain the most from their interactions.
-In Section~\ref{subsection:longer_memory_best_response}, the performance of
+In evolutionary settings it was specifically shown that being adaptable and being
+able to forgive after being tricked were key factors. In Section~\ref{subsection:longer_memory_best_response}, the performance of
 memory-one strategies was put against the performance of a longer memory
-strategy called Gambler. There were several cases where the Gambler would outperform
+strategy called Gambler. There were several cases where Gambler would outperform
 the memory-one strategy, however a memory-one strategy never managed to outperform
 a Gambler. This result occurred whilst considering a Gambler with a sufficiently
 larger memory but not a sufficiently larger amount of information regarding
 the game.
+
 All the empirical results presented in this manuscript have been for the
 case of $N=2$. In future work we would consider larger values of $N$, however, we
 believe that for larger values of $N$ the results that have been presented here would
